mount-longhorn.yaml
apiVersion: v1
kind: Pod
metadata:
  name: longhorn-editor
  namespace: nextcloud
spec:
  containers:
  - name: editor
    image: busybox
    command: ["sh", "-c", "sleep 3600"]
    volumeMounts:
    - mountPath: /mnt/longhorn
      name: longhorn-volume
  volumes:
  - name: longhorn-volume
    persistentVolumeClaim:
      claimName: nextcloud-server-pvc
~
